--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>UKR.NET: Всі новини України, останні новини дня в Україні та Світі</title>
-<meta name="description" content="Свіжі новини України, останні новини з-за кордону, новини політики, економіки, спорту, культури, технологій, шоу-бизнесу...">
+<meta name="description" content="Working with git">
 <meta name="keywords" content="новини, україна, відео, новини україни, україна новини, політика, економіка, випадки, технології, спорт, здоров&#39;я, культура, за кордоном, курйози, фоторепортаж, фото, відеорепортаж, відео">
 <meta name="robots" content="all">
 <meta name="publisher" content="UkrNet //www.ukr.net">
